améliorations d'affichage diverses

--- a/www/configurations/display.ini
+++ b/www/configurations/display.ini
@@ -4,6 +4,10 @@
 [display]
 ; afficher la taille des repos ou non dans la liste des repos
 printRepoSize = "yes"
+; afficher le type des repos
+printRepoType = "yes"
+; afficher la signature des repos
+printRepoSignature = "yes"
 ; filtrer par groupes dans la liste des repos
 filterByGroups = "yes"
 ; simplifier la vue en n'affichant pas les noms de repos similaires
@@ -14,6 +18,7 @@ alternativeColor1 = "#808080"
 alternativeColor2 = "#FFFFFF"
 ; ligne séparatrice entre chaque repo
 dividingLine = "no"
+; mise en cache des listes de repos
 cache_repos_list = "no"
 
 ; Blocs de divs ServerInfo sur la droite de la page d'accueil
