--- a/www/configurations/display.ini
+++ b/www/configurations/display.ini
@@ -1,20 +1,11 @@
-; Paramètres d'affichage
+; Repos-list display settings
 
-; Affichage dans la liste des repos
 [display]
-; afficher la taille des repos ou non dans la liste des repos
+; print repo's size
 printRepoSize = "yes"
-; afficher le type des repos
+; print repo's type (mirror or local)
 printRepoType = "yes"
-; afficher la signature des repos
+; print repo's GPG signature status
 printRepoSignature = "yes"
-; mise en cache des listes de repos
+; activate repos-list caching in /dev/shm
 cache_repos_list = "no"
-
-; Blocs de divs ServerInfo sur la droite de la page d'accueil
-[serverinfo]
-display_serverInfo_reposInfo = "yes"
-display_serverInfo_rootSpace = "yes"
-display_serverInfo_reposDirSpace = "yes"
-display_serverInfo_planInfo = "yes"
-display_serverInfo_connectionInfo = "yes"
