--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -1,8 +1,8 @@
 name: PHP_CodeSniffer
 
 on:
-  push:
-    branches: [ dev ]
+  # push:
+  #   branches: [ dev ]
   pull_request:
     push:
       branches: [ stable ]
