--- a/.github/workflows/rocky-rpm-repo.yml
+++ b/.github/workflows/rocky-rpm-repo.yml
@@ -57,6 +57,7 @@ jobs:
           cp -r $GITHUB_WORKSPACE/www/* /var/www/repomanager/
           cp -r $GITHUB_WORKSPACE/tools /var/lib/repomanager/
           cp $GITHUB_WORKSPACE/repomanager /var/lib/repomanager/
+          cp $GITHUB_WORKSPACE/www/version /var/lib/repomanager/version.available
 
       - name: Set up repomanager main config
         run: |
