--- a/.github/workflows/debian-deb-repo.yml
+++ b/.github/workflows/debian-deb-repo.yml
@@ -54,6 +54,7 @@ jobs:
         run: |
           sudo curl -s -o /var/lib/repomanager/configurations/repomanager.conf https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/repomanager.conf 2> /dev/null
           sudo curl -s -L -o /var/lib/repomanager/db/repomanager.db https://github.com/lbr38/resources/raw/main/ci/repomanager/repomanager.db 2> /dev/null
+          sudo curl -s -L -o /var/lib/repomanager/db/repomanager-hosts.db https://github.com/lbr38/resources/raw/main/ci/repomanager/repomanager-hosts.db 2> /dev/null
           sudo ls -l /var/lib/repomanager/configurations/
           sudo ls -l /var/lib/repomanager/db/
       
