--- a/.github/workflows/rocky-rpm-repo.yml
+++ b/.github/workflows/rocky-rpm-repo.yml
@@ -98,7 +98,9 @@ jobs:
         run: /var/lib/repomanager/repomanager -p
 
       - name: Update database
-        run: sudo -u www-data php /var/www/repomanager/tools/update-database.php
+        run: |
+          sudo -u www-data php /var/www/repomanager/tools/initialize-database.php
+          sudo -u www-data php /var/www/repomanager/tools/update-database.php
 
       - name: Run job - Mirror repo
         run: sudo -u www-data php /var/www/repomanager/operations/execute.php --id='ci-mirror-repo'
