--- a/.github/workflows/rocky-rpm-repo.yml
+++ b/.github/workflows/rocky-rpm-repo.yml
@@ -59,34 +59,10 @@ jobs:
 
       - name: Set up repomanager main config
         run: |
-          curl -s -o /var/lib/repomanager/configurations/repomanager.conf https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/repomanager.conf 2> /dev/null
           curl -s -L -o /var/lib/repomanager/db/repomanager.db https://github.com/lbr38/resources/raw/main/ci/repomanager/repomanager.db 2> /dev/null
           curl -s -L -o /var/lib/repomanager/db/repomanager-hosts.db https://github.com/lbr38/resources/raw/main/ci/repomanager/repomanager-hosts.db 2> /dev/null
           ls -l /var/lib/repomanager/configurations/
           ls -l /var/lib/repomanager/db/
-      
-      - name: Generate repomanager GPG signing key
-        run: |
-          echo "Key-Type: RSA" > /tmp/gpg-template-file
-          echo "Key-Length: 2048" >> /tmp/gpg-template-file
-          echo "Key-Usage: sign" >> /tmp/gpg-template-file
-          echo "Name-Real: Repomanager" >> /tmp/gpg-template-file
-          echo "Name-Comment: No description" >> /tmp/gpg-template-file
-          echo "Name-Email: gpgkey@nomail.com" >> /tmp/gpg-template-file
-          echo "Expire-Date: 0" >> /tmp/gpg-template-file
-          echo "Passphrase: beautifulPassphrase" >> /tmp/gpg-template-file
-          gpg2 --batch --gen-key --homedir /var/lib/repomanager/.gnupg/ --no-permission-warning /tmp/gpg-template-file 2>/dev/null
-          echo "beautifulPassphrase" > passphrase
-          mv passphrase /var/lib/repomanager/.gnupg/passphrase
-          rm /tmp/gpg-template-file
-
-      - name: Set up GPG config
-        run: |
-          echo -e "pinentry-mode loopback\npassphrase-file /var/lib/repomanager/.gnupg/passphrase" > gpg.conf 
-          mv gpg.conf /var/lib/repomanager/.gnupg/gpg.conf
-          mkdir -p /var/lib/repomanager/.rpm
-          echo -e "%__gpg /usr/bin/gpg2\n%_gpg_path /var/lib/repomanager/.gnupg\n%_gpg_name gpgkey@nomail.com\n%_gpg_passphrase_file /var/lib/repomanager/.gnupg/passphrase\n%__gpg_sign_cmd %{__gpg} gpg --no-verbose --no-armor --batch --pinentry-mode loopback --passphrase-file %{_gpg_passphrase_file} %{?_gpg_digest_algo:--digest-algo %{_gpg_digest_algo}} --no-secmem-warning -u \"%{_gpg_name}\" -sbo %{__signature_filename} %{__plaintext_filename}" > .mcs          
-          mv .mcs /var/lib/repomanager/.rpm/.mcs
 
       - name: Download jobs
         run: |
@@ -97,8 +73,11 @@ jobs:
           curl -s -o /var/lib/repomanager/operations/pool/ci-delete.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/rpm/ci-delete.json 2> /dev/null
           curl -s -o /var/lib/repomanager/operations/pool/ci-reconstruct.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/rpm/ci-reconstruct.json 2> /dev/null
 
+      - name: Check repomanager dependencies
+        run: sudo /var/www/repomanager/bin/repomanager -d --package-type rpm
+
       - name: Set up permissions
-        run: /var/www/repomanager/bin/repomanager -p
+        run: sudo chown -R www-data:repomanager /var/www/repomanager /var/lib/repomanager /home/repo
 
       - name: Update database
         run: |
